# magnetic_encoder_tablet

./: .gitignore  CMakeLists.txt  Flash_code.sh  README.md  as5600_encoder.c  as5600_encoder.h  magnetic_encoder_tablet.c
